--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -4,6 +4,42 @@ cc_library(
     name = "day_one",
     srcs = ["day_one.cpp"],
     hdrs = ["day_one.h"],
+    copts = [
+        "-O3",
+        "-pipe",
+        "-Wall",
+        "-feliminate-unused-debug-types",
+        "-fstack-clash-protection",
+        "-fstack-protector-strong",
+        "-Wformat",
+        "-Wformat-security",
+        "-ffunction-sections",
+        "-fdata-sections",
+        "-frecord-gcc-switches",
+        "-mtune=native",
+        "-march=native",
+    ],
+)
+
+cc_library(
+    name = "day_two",
+    srcs = ["day_two.cpp"],
+    hdrs = ["day_two.h"],
+    copts = [
+        "-O3",
+        "-pipe",
+        "-Wall",
+        "-feliminate-unused-debug-types",
+        "-fstack-clash-protection",
+        "-fstack-protector-strong",
+        "-Wformat",
+        "-Wformat-security",
+        "-ffunction-sections",
+        "-fdata-sections",
+        "-frecord-gcc-switches",
+        "-mtune=native",
+        "-march=native",
+    ],
 )
 
 cc_binary(
@@ -11,5 +47,21 @@ cc_binary(
     srcs = ["main.cpp"],
     deps = [
         ":day_one",
+        ":day_two",
+    ],
+    copts = [
+        "-O3",
+        "-pipe",
+        "-Wall",
+        "-feliminate-unused-debug-types",
+        "-fstack-clash-protection",
+        "-fstack-protector-strong",
+        "-Wformat",
+        "-Wformat-security",
+        "-ffunction-sections",
+        "-fdata-sections",
+        "-frecord-gcc-switches",
+        "-mtune=native",
+        "-march=native",
     ],
 )
